<resources>
    <string name="app_name">TaskMaster</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca_de">Acerca de</string>
    <string name="perfil">Perfil</string>>
    <string name="contrasena">¿Has olvidado tu contraseña?</string>
    <string name="email">Ingresa tu email</string>
    <string name="contrasena2">Ingresa tu contraseña</string>
    <string name="inicio">Iniciar sesión</string>
    <string name="tema">Tema</string>
    <string name="predeterminado">Predeterminado</string>
    <string name="oscuro">Oscuro</string>
    <string name="aqua">Aqua</string>
    <string name="neon">Neón</string>
    <string name="tamano">Tamaño</string>
    <string name="chiquita">aA</string>
    <string name="letraGrande">aA</string>
    <string name="formato_de_fecha">Formato de fecha</string>
    <string name="twelve">12h</string>
    <string name="twentyFour">24h</string>
    <string name="registrobtn">Registrarse</string>
    <string name="usuariotext">Ingresa nombre de usuario </string>
    <string name="cuenta">¿No tienes cuenta?</string>
    <string name="yacuenta">¿Ya tienes cuenta?</string>
    <string name="agregar">+</string>
    <string name="descripcion_de_la_tarea">Descripcion de la tarea</string>
    <string name="seleccionar_fecha_limite">Seleccionar fecha y hora limite</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="iniciod">Inicio</string>
    <string name="salir">Salir</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificaras">Modificar</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="kkkk">Usuario:</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="o">O</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>

    <string name="client_id">830570465985-g37ip0o0rto87n5tnskjgav8q1dlpuhj.apps.googleusercontent.com</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="email_pfp">Email</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cargando">Cargando...</string>
    <string name="buscar">Buscar...</string>
    <string name="crear_tarea">Crear Tarea</string>
    <string name="ver_tarea">Ver Tarea</string>
    <string name="nombres">Nombre</string>
    <string name="s">Nombre de usuario</string>
    <string name="correo_electronico">Correo Electronico</string>
</resources>