<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_radius"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/vTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre_de_la_tarea" />

        <EditText
            android:id="@+id/createTarea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"

            android:labelFor="@+id/vTarea" />

        <TextView
            android:id="@+id/vDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/descripcion_de_la_tarea" />

        <EditText
            android:id="@+id/createDesc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"

            android:inputType="text"
            android:labelFor="@+id/vDescripcion" />

        <TextView
            android:id="@+id/vFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/seleccionar_fecha_limite" />

        <EditText
            android:id="@+id/createFecha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:labelFor="@+id/vFecha" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_eve"
                android:text="@string/volver" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_toEndOf="@+id/btnVolver"
                android:background="@drawable/rounded_eve"
                android:text="@string/guardar" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>