<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_edit_note_24" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/kkkk"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/campoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="text"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Email:"
        android:textSize="18sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/campoEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray" />


        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="340dp"
            android:text="Cerrar Sesión" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/tema"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <RadioGroup
            android:id="@+id/rbGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="5dp"
                android:text="@string/predeterminado" />

            <RadioButton
                android:id="@+id/rbOscuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="5dp"
                android:text="@string/oscuro" />

        </RadioGroup>


    </LinearLayout>

</FrameLayout>