<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/profile_background"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_eve"
        android:padding="16dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ver Tarea"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="140dp"
                android:src="@drawable/baseline_edit_note_24"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/vTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nombre_de_la_tarea" />

        <EditText
            android:id="@+id/txtTarea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@+id/vTarea" />

        <TextView
            android:id="@+id/vDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/descripcion_de_la_tarea" />

        <EditText
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@+id/vDescripcion" />

        <TextView
            android:id="@+id/vFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/seleccionar_fecha_limite" />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:labelFor="@+id/vFecha"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_eve"
                android:text="@string/volver" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="118dp"
                android:layout_toEndOf="@+id/btnVolver"
                android:background="@drawable/rounded_eve"
                android:text="@string/guardar" />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            app:srcCompat="@drawable/baseline_delete_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            app:srcCompat="@drawable/baseline_border_color_24" />

    </RelativeLayout>

</LinearLayout>